<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rate_title">DO YOU LIKE OUR APP?</string>
    <string name="rate_content">Give us a quick rating so we know if you like it?</string>
    <string name="too_many_ads">Too many ads</string>
    <string name="not_working">Not working</string>
    <string name="other">Other</string>
    <string name="send_feedback">Please leave a feedback to help us improve product</string>
    <string name="submit">Submit</string>
    <string name="later">Maybe later</string>
    <string name="thanks_rating">Thank you for rating</string>
    <string name="thanks_feedback">Thank for your feedback!</string>
    <string name="hint_feedback">Please leave a feedback to help us improve product</string>
    <string name="rate">Rate</string>
    <string name="title_oh_no">Oh, no!</string>
    <string name="content_give_feedback">Please give us some feedback</string>
    <string name="title_like_you">We like you too!</string>
    <string name="title_thank_feedback">Thanks for your feedback</string>
    <string name="content_rate">We are working hard for a better user experience. We’d greatly appreciate if you can rate us.</string>
    <string name="txt_the_best_we_can_get">The best we can get :)</string>

    <string name="rating_invitation">We are working hard for a better user experience. We’d greatly appreciate if you can rate us.</string>
    <string name="please_feedback">Please give us some feedback</string>
    <string name="rate_thanks_feedback">Thanks for your feedback</string>
    <string name="we_like_you_too">We like you too!</string>
    <string name="oh_no">Oh, no!</string>
    <string name="the_best_we_can_get">The best we can get :)</string>
    <string name="rate_us">Rate us</string>
    <string name="gmail_package">com.google.android.gm</string>
    <string name="mail_fixback_rated">publishing.apero@gmail.com</string>
    <string name="subject_mail_fixback_rate">"[%1$s] Feedback</string>
    <string name="content_mail_fixback_rate">"i. %1$s \nii. Rate star (eg: %2$s/5) \niii. Feedback text"</string>
    <string name="rate_start_event">rate_star_%1$s</string>
    <string name="cancel">Cancel</string>

    <string name="content_rate_0s">Please rate us to enhance your experience. Thank you!</string>
    <string name="content_rate_1s">We value your feedback.</string>
    <string name="content_rate_2s">We\'ll improve your experience</string>
    <string name="content_rate_3s">We\'re committed to making it even better.</string>
    <string name="content_rate_4s">We\'re delighted that you enjoy using our app</string>
    <string name="content_rate_5s">We are thrilled to hear that you love our app.</string>
    <string name="thanks_for_your_rating">Thanks for your rating!</string>
    <string name="tt_label_ok">OK</string>
    <string name="rate_message_feedback">Let us know your experience and we\'ll try to improve it</string>

    <string name="rate_title_normal">Do you like the app?</string>
    <string name="rate_message">We’d greatly appreciate if you can rate us</string>
    <string name="rate_best_way">The best we can get :)</string>
    <string name="rate_message_good">Thanks for your feedback</string>
    <string name="rate_message_bad">Please leave us some feedback</string>
    <string name="rate_on_google_play">Rate on Google Play</string>
    <string name="rate_feedback_title">Send us some feedback!</string>
    <string name="rate_feedback_description">Found a bug? Have a suggestion? Fill out the form below and we’ll take a look!</string>
    <string name="rate_feedback_hint">Enter your feedback here! (min 6 characters)</string>
    <string name="rate_feedback_submit">SUBMIT</string>
    <string name="rate_feedback_upload">Upload photos</string>
    <string name="rate_feedback_default_option1">Crashes &amp; Bugs</string>
    <string name="rate_feedback_default_option2">Suggestions</string>
    <string name="rate_feedback_default_option3">Other</string>
</resources>
