<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:background="@drawable/bg_full_8dp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_24sdp"
        android:paddingBottom="@dimen/_24sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_message_feedback"
            android:textColor="@color/rate_text"
            android:textSize="14dp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtFeedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_border_8dp"
            android:gravity="top"
            android:hint="@string/please_feedback"
            android:padding="@dimen/_10sdp"
            android:textFontWeight="400"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_full_12dp"
            android:backgroundTint="@color/rate_button"
            android:enabled="false"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/rate_button_text"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtFeedback" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btnDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/rate_ic_close_rate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>