<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".dialog.rate_smile.FeedbackActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rate_feedback_bg_color">

        <LinearLayout
            android:id="@+id/llToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:contentDescription="@null"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/rate_ic_arrow_back" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/llToolbar">

            <ImageView
                android:id="@+id/imgFeedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:src="@drawable/rate_img_feedback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:text="@string/rate_feedback_title"
                android:textColor="@color/rate_feedback_title_color"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgFeedback" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/rate_feedback_description"
                android:textColor="@color/rate_feedback_title_color"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctlContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rate_bg_feedback_content"
            android:padding="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ctlTitle"
            app:layout_constraintVertical_bias="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

            <EditText
                android:id="@+id/edtFeedback"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:backgroundTint="@color/white"
                android:gravity="top"
                android:hint="@string/rate_feedback_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:paddingHorizontal="0dp"
                android:textColor="@color/rate_feedback_input_text_color"
                android:textColorHint="@color/rate_feedback_hint_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@id/ctlMedia"
                app:layout_constraintTop_toBottomOf="@id/rvOptions"
                app:layout_constraintVertical_bias="0" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ctlMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_14sdp"
                app:layout_constraintBottom_toTopOf="@id/txtSubmit">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMedia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/rate_ic_add_media"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/inter_bold"
                    android:gravity="center_vertical"
                    android:text="@string/rate_feedback_upload"
                    android:textColor="@color/rate_feedback_upload_color"
                    android:textSize="13sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="UseCompatTextViewDrawableXml" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtSubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/rate_bg_feedback_submit"
                android:enabled="false"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/rate_feedback_submit"
                android:textColor="@color/rate_feedback_submit_color"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

