<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:background="#000000">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:background="@drawable/bg_full_8dp"
        android:paddingBottom="@dimen/_24sdp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_42sdp"
            android:text="@string/rate_title_normal"
            android:textColor="@color/rate_text"
            android:textSize="@dimen/_17sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:minLines="2"
            android:text="@string/rate_message"
            android:textColor="@color/rate_text"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/rate_best_way"
            android:textColor="@color/rate_best_way"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMessage" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBestWay"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:src="@drawable/rate_best_way"
            app:layout_constraintStart_toEndOf="@id/tvBest"
            app:layout_constraintTop_toTopOf="@id/tvBest" />

        <com.ymb.ratingbar_lib.RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            app:drawable_empty="@drawable/rate_ic_star_3_inactive"
            app:drawable_filled="@drawable/rate_ic_star_3_active"
            app:drawable_half="@drawable/rate_ic_star_3_inactive"
            app:drawable_margin="@dimen/_14sdp"
            app:drawable_size="@dimen/_30sdp"
            app:is_indicator="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBestWay"
            app:max_count="5"
            app:rating="0" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/bg_full_12dp"
            android:backgroundTint="@color/rate_button"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/rate_us"
            android:textAllCaps="false"
            android:textColor="@color/rate_button_text"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rating" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewCircle"
        android:layout_width="@dimen/_72sdp"
        android:layout_height="@dimen/_72sdp"
        android:background="@drawable/bg_circle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivSmile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_12sdp"
        android:src="@drawable/rate_ic_rate_good"
        app:layout_constraintBottom_toBottomOf="@id/viewCircle"
        app:layout_constraintLeft_toLeftOf="@id/viewCircle"
        app:layout_constraintRight_toRightOf="@id/viewCircle"
        app:layout_constraintTop_toTopOf="@id/viewCircle" />

    <ImageView
        android:id="@+id/btnDismiss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:src="@drawable/rate_ic_close_rate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>