<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_4sdp"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/btn_scan">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgSmile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                app:srcCompat="@drawable/ic_smile0"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="#272643"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                android:typeface="serif"
                android:visibility="gone"
                tools:text="We like you too!" />

            <TextView
                android:id="@+id/txtContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/content_rate"
                android:textColor="#272643"
                android:textSize="@dimen/_13sdp"
                android:typeface="serif" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ymb.ratingbar_lib.RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_32sdp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="@dimen/_32sdp"
                    app:drawable_empty="@drawable/ic_star_inactive_red"
                    app:drawable_filled="@drawable/ic_star_active_red"
                    app:drawable_half="@drawable/ic_star_inactive_red"
                    app:drawable_margin="@dimen/_20sdp"
                    app:drawable_size="@dimen/_26sdp"
                    app:is_indicator="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:max_count="5"
                    app:rating="0" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/txt_the_best_we_can_get"
                    android:textColor="#00B2FF"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rating" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@+id/rating"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/rating"
                    app:srcCompat="@drawable/line_arrow"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:layout_marginVertical="@dimen/_20sdp"
                android:background="@drawable/bg_submit"
                android:backgroundTint="@color/white_blur"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/rate"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_rate_close"
        tools:ignore="ContentDescription" />
</RelativeLayout>